sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:6: error: type mismatch;
 found   : Unit
 required: Boolean
  while (tri = false)
             ^